--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
--r requirements.txt 
+-r requirements.txt
 apipkg==1.4
 attrs==17.4.0
 execnet==1.5.0
@@ -9,4 +9,5 @@ pytest-forked==0.2
 pytest-sugar==0.9.1
 pytest-xdist==1.22.2
 termcolor==1.1.0
-
+pdbpp==0.9.2
+fancycompleter==0.8
