--- a/eduzen_bot/logging.yml
+++ b/eduzen_bot/logging.yml
@@ -4,19 +4,24 @@ disable_existing_loggers: False
 formatters:
   verbose:
     format: '[eduzen_bot] %(asctime)s: %(levelname)s %(message)s'
-
+  colored:
+      (): structlog.stdlib.ProcessorFormatter,
+      processor: structlog.dev.ConsoleRenderer(colors=True)
 handlers:
   stdout:
     class: logging.StreamHandler
     stream: 'ext://sys.stdout'
-    formatter: verbose
+    formatter: colored
+    level: DEBUG
 
-  syslog:
-    class: logging.handlers.SysLogHandler
-    address: '/dev/log'
+  file:
+    class: logging.handlers.RotatingFileHandler
+    filename: "eduzen_bot.log"
     formatter: verbose
-
+    maxBytes: 10485760 # 10MB
+    backupCount: 20
+    encoding: utf8
+    level: INFO
 root:
-  'handlers': [syslog]
-  level: INFO
+  'handlers': [file]
   'propagate': True
