--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ textblob==0.15.1
 tweepy==3.6.0
 emoji==0.5.0
 docopt==0.6.2
-structlog==18.1.0
+structlog==18.2.0
 pyyaml==3.12
 colorama==0.3.9
+tmdbsimple==2.2.0
