--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,12 @@ services:
             dockerfile: Dockerfile
         volumes:
             - .:/code
+        links:
+            - wdb
+        environment:
+            WDB_SOCKET_SERVER: wdb
+            WDB_NO_BROWSER_AUTO_OPEN: "True"
+    wdb:
+        image: kozea/wdb
+        ports:
+            - "1984:1984"
