--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,18 @@ chardet==3.0.4
 future==0.16.0
 idna==2.6
 Pygments==2.2.0
-python-telegram-bot==11.1.0
+python-telegram-bot==12.0.0b1
 requests==2.21.0
 urllib3==1.24.1
 wmctrl==0.3
 peewee==3.1.2
 beautifulsoup4==4.6.0
 textblob==0.15.1
-tweepy==3.6.0
-emoji==0.5.0
+tweepy==3.7.0
+emoji==0.5.1
 docopt==0.6.2
-structlog==18.2.0
-pyyaml==3.12
+structlog==19.1.0
+pyyaml==5.1
 colorama==0.3.9
 tmdbsimple==2.2.0
-pytz==2018.7
+pytz==2018.9
