--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-certifi==2018.11.29
+certifi==2019.3.9
 chardet==3.0.4
 future==0.16.0
 idna==2.6
@@ -8,7 +8,7 @@ requests==2.21.0
 urllib3==1.24.1
 wmctrl==0.3
 peewee==3.1.2
-beautifulsoup4==4.6.0
+beautifulsoup4==4.7.1
 textblob==0.15.1
 tweepy==3.7.0
 emoji==0.5.1
@@ -18,3 +18,5 @@ pyyaml==5.1
 colorama==0.3.9
 tmdbsimple==2.2.0
 pytz==2018.9
+sentry-sdk==0.7.10
+python-dotenv
