--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ idna==2.6
 Pygments==2.2.0
 python-telegram-bot==12.0.0b1
 requests==2.21.0
-urllib3==1.24.1
+urllib3>=1.24.2
 wmctrl==0.3
 peewee==3.1.2
 beautifulsoup4==4.7.1
