--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,8 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+exclude = docs,versioneer.py,.eggs/
+ignore=E203,E402
 count = True
 show_source = True
 statistics = True
@@ -35,7 +36,7 @@ style = pep440-post
 versionfile_source = eduzen_bot/_version.py
 versionfile_build = eduzen_bot/_version.py
 tag_prefix = v
-parentdir_prefix = 
+parentdir_prefix =
 
 # Define setup.py command aliases here
 
