--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+attrs==19.3.0
 certifi==2019.3.9
 chardet==3.0.4
 future==0.16.0
 idna==2.6
 Pygments==2.2.0
-python-telegram-bot==12.0.0b1
+python-telegram-bot~=12.2.0
 requests==2.22.0
 urllib3<1.25,>=1.21.1
 wmctrl==0.3
@@ -17,7 +18,7 @@ structlog==19.1.0
 pyyaml==5.1
 colorama==0.3.9
 tmdbsimple==2.2.0
-pytz==2018.9
-sentry-sdk==0.11.1
+pytz==2019.2
+sentry-sdk==0.12.2
 aiocontextvars
 python-dotenv
