--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ show_source = True
 statistics = True
 max_line_length = 119
 filename = *.py
+extend-ignore =
+    # See https://github.com/PyCQA/pycodestyle/issues/373
+    E203
 
 [aliases]
 test = pytest
