--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,17 +1,9 @@
 -r requirements.txt
-apipkg==1.4
-execnet==1.5.0
-pluggy==0.6.0
-py==1.5.2
-pytest==3.4.2
-pytest-forked==0.2
-pytest-sugar==0.9.1
-pytest-xdist==1.22.2
-termcolor==1.1.0
-pdbpp==0.10.2
-fancycompleter==0.8
-ipython==7.0.1
-flake8==3.6.0
-wdb
 black
+flake8
+ipython
 monkeytype
+pytest
+pytest-sugar
+pytest-xdist
+wdb
