--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   eduzenbot:
     build: .
-    command: ["python3", "eduzen_bot", "-v"]
+    command: ["python3", "eduzen_bot", "-v", "--log_level=INFO"]
     volumes:
       - .:/code
     env_file:
