✨ working and 🧹 Cleaning up (#6)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,8 +12,8 @@ updates:
     # Include a list of updated dependencies
     # with a prefix determined by the dependency group
     commit-message:
-      prefix: "pip prod"
-      prefix-development: "pip dev"
+      prefix: "poetry prod"
+      prefix-development: "poetry dev"
       include: "scope"
 
   - package-ecosystem: "github-actions"
