--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,8 @@ wdb = "^3.3.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[virtualenvs]
+create = true
+local = true
+in-project = true
