--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,12 +33,14 @@ regex = "^2020.11.13"
 PyYAML = "^5.4.1"
 ipdb = "^0.13.4"
 psycopg2-binary = "^2.8.6"
+yfinance = "^0.1.55"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 flake8 = "^3.8.4"
 pytest = "^6.2.1"
 ipython = "^7.19.0"
+jedi = "0.18.0"
 pre-commit = "^2.9.3"
 wdb = "^3.3.0"
 
@@ -46,7 +48,7 @@ wdb = "^3.3.0"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[virtualenvs]
-create = true
-local = true
-in-project = true
+# [virtualenvs]
+# create = true
+# local = true
+# in-project = true
