--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3'
 
+volumes:
+  pgdata:
+
 services:
   eduzenbot:
     build: .
@@ -8,6 +11,15 @@ services:
       - .:/code
     env_file:
       - .env
+
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - pgdata:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=$POSTGRES_DB
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_USER=$POSTGRES_USER
 
   # wdb:
   #   image: kozea/wdb
