--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3'
 
 volumes:
   pgdata:
+  shell_history:
 
 services:
   eduzenbot:
     build: .
-    command: ["python3", "eduzen_bot", "-v", "--log_level=INFO"]
+    command: ["sh", "/code/eduzen_bot/scripts/runserver.sh"]
     volumes:
       - .:/code
+      - shell_history:/root/hist
     env_file:
       - .env
 
@@ -17,9 +19,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_DB=$POSTGRES_DB
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - POSTGRES_USER=$POSTGRES_USER
 
   # wdb:
   #   image: kozea/wdb
