--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ python-telegram-bot = "^13.0"
 sentry-sdk = "^0.19.1"
 requests = "^2.25.1"
 beautifulsoup4 = "^4.9.3"
-docopt = "^0.6.2"
 structlog = "^20.1.0"
 tweepy = "^3.10.0"
 tmdbsimple = "^2.6.6"
@@ -34,6 +33,7 @@ PyYAML = "^5.4.1"
 ipdb = "^0.13.4"
 psycopg2-binary = "^2.8.6"
 yfinance = "^0.1.55"
+colorama = "^0.4.4"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
