--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
     rev: 5.6.4
     hooks:
       - id: isort
+        args: [--profile=black]
 
   - repo: https://github.com/psf/black
     rev: 20.8b1
