--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,4 @@ TWITTER_ACCESS_TOKEN_SECRET=secret
 TWITTER_ACCESS_TOKEN=token
 TWITTER_CONSUMER_KEY=key
 TWITTER_CONSUMER_SECRET=secret
+PYTHONBREAKPOINT=ipdb.set_trace
