--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ include_trailing_comma = true
 [tool.poetry.dependencies]
 python = "^3.8"
 python-dotenv = "^0.15.0"
-python-telegram-bot = "^13.2"
+python-telegram-bot = "13.1"
 sentry-sdk = "^0.19.1"
 requests = "^2.25.1"
 beautifulsoup4 = "^4.9.3"
@@ -39,10 +39,12 @@ colorama = "^0.4.4"
 black = "^20.8b1"
 flake8 = "^3.8.4"
 pytest = "^6.2.1"
-ipython = "^7.19.0"
+ipython = "^7.20.0"
 jedi = "0.18.0"
-pre-commit = "^2.9.3"
+pre-commit = "^2.10.1"
 wdb = "^3.3.0"
+ipdb = "^0.13.4"
+Faker = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
