--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,23 +2,24 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.0.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
       - id: check-ast
       - id: check-byte-order-marker
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-yaml
       - id: check-json
-      - id: pretty-format-json
-        args: [--autofix]
-      - id: mixed-line-ending
       - id: check-added-large-files
       - id: check-merge-conflict
+      - id: check-toml
       - id: debug-statements
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
       - id: requirements-txt-fixer
+      - id: trailing-whitespace
+      - id: pretty-format-json
+        args: [--autofix]
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.8.0
@@ -27,19 +28,19 @@ repos:
         args: [--profile=black]
 
   - repo: https://github.com/psf/black
-    rev: 21.5b0
+    rev: 21.5b1
     hooks:
       - id: black
         args: [--safe, --quiet, -l 120]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.14.0
+    rev: v2.15.0
     hooks:
       - id: pyupgrade
         args: [--py3-plus]
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.1
+    rev: 3.9.2
     hooks:
       - id: flake8
         language_version: python3
