--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.0
+    rev: v4.0.1
     hooks:
       - id: check-ast
       - id: check-byte-order-marker
@@ -21,20 +21,25 @@ repos:
       - id: pretty-format-json
         args: [--autofix]
 
+  - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+    rev: v1.2.1
+    hooks:
+      - id: python-safety-dependencies-check
+
   - repo: https://github.com/PyCQA/isort
-    rev: 5.8.0
+    rev: 5.9.2
     hooks:
       - id: isort
         args: [--profile=black]
 
   - repo: https://github.com/psf/black
-    rev: 21.5b1
+    rev: 21.7b0
     hooks:
       - id: black
         args: [--safe, --quiet, -l 120]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.15.0
+    rev: v2.23.0
     hooks:
       - id: pyupgrade
         args: [--py3-plus]
