--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,15 +38,23 @@ repos:
       - id: black
         args: [--safe, --quiet, -l 120]
 
+  -   repo: https://github.com/asottile/blacken-docs
+      rev: v1.10.0
+      hooks:
+      -   id: blacken-docs
+          additional_dependencies: [black==21.7b0]
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.23.0
     hooks:
       - id: pyupgrade
-        args: [--py3-plus]
+        args: [--py37-plus]
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
       - id: flake8
         language_version: python3
-        additional_dependencies: [flake8-typing-imports==1.3.0, flake8-bugbear]
+        additional_dependencies:
+          - flake8-typing-imports==1.9.0
+          - flake8-bugbear
