--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,7 +48,7 @@ repos:
     rev: v2.23.0
     hooks:
       - id: pyupgrade
-        args: [--py37-plus]
+        args: [--py39-plus]
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
@@ -58,3 +58,4 @@ repos:
         additional_dependencies:
           - flake8-typing-imports==1.9.0
           - flake8-bugbear
+          - flake8-implicit-str-concat
