--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ pre-commit = "^2.13.0"
 wdb = "^3.3.0"
 ipdb = "^0.13.9"
 Faker = "^8.10.2"
+mypy = "^0.910"
+types-requests = "^2.25.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
