--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,29 +2,16 @@ name: Docker
 
 on:
   push:
-    # Publish `master` as Docker `latest` image.
-    branches:
-      - master
-
-    # Publish `v1.2.3` tags as releases.
+    branches: [master, main]
     tags:
       - v*
 
-  # Run tests for any PRs.
-  pull_request:
-
-  workflow_run:
-    workflows: ["Python application"]
-    branches: [master, main]
-    types:
-      - completed
-      - requested
 env:
-  # TODO: Change variable to your image's name.
   IMAGE_NAME: eduzen_bot
+  username: ${{ secrets.DOCKERHUB_USERNAME }}
+  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
 
@@ -32,20 +19,16 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1.5.1
-      -
-        name: Login to DockerHub
+
+      - name: Login to DockerHub
         uses: docker/login-action@v1.10.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2.6.1
         with:
@@ -53,6 +36,6 @@ jobs:
           tags: eduzen/bot:latest
           file: ./Dockerfile
           target: prod
-      -
-        name: Image digest
+
+      - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
