--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,42 +1,41 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main ]
   pull_request:
-    branches: [ master ]
+  release:
 
 jobs:
-  ci:
+  test:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
-        poetry-version: [1.1.2]
+        python-version: [3.9]
+        poetry-version: [1.1.7]
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2.2.2
       with:
-        python-version: 3.8
+        python-version: 3.9
 
     - name: Setup System
       run: |
         sudo apt-get install libsqlite3-dev
 
-    - name: Cache dependency # caching dependency will make our build faster.
-      uses: actions/cache@v2.1.6 # for more info checkout pip section documentation at https://github.com/actions/cache
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v2
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements_dev.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        path: .venv
+        key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Update pip
       run: |
@@ -49,9 +48,6 @@ jobs:
 
     - name: Install dependencies
       run: poetry install
-
-    - name: Check Code Style
-      uses: pre-commit/action@v2.0.3
 
     - name: Test
       run: poetry run pytest
