--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test
+name: Tests
 
 on:
   push:
@@ -10,9 +10,8 @@ on:
   release:
 
 jobs:
-  test:
+  tests:
     strategy:
-      fail-fast: false
       matrix:
         python-version: [3.9]
         poetry-version: [1.1.7]
@@ -23,9 +22,9 @@ jobs:
 
     - uses: actions/setup-python@v2.2.2
       with:
-        python-version: ${{ python-version }}
+        python-version: ${{ matrix.python-version }}
 
-    - name: Setup System
+    - name: Setup libsqlite3
       run: |
         sudo apt-get install libsqlite3-dev
 
