--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Install and set up Poetry
       run: |
-        pip install poetry==${{ poetry-version }}
+        pip install poetry==${{ matrix.poetry-version }}
         source $HOME/.poetry/env
         poetry config virtualenvs.in-project true
 
