--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,6 @@ jobs:
     - name: Install and set up Poetry
       run: |
         pip install poetry==${{ matrix.poetry-version }}
-        source $HOME/.poetry/env
         poetry config virtualenvs.in-project true
 
     - name: Set up cache
@@ -46,11 +45,7 @@ jobs:
         key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
-      run: |
-        source $HOME/.poetry/env
-        poetry install
+      run: poetry install -v
 
     - name: Test
-      run: |
-        source $HOME/.poetry/env
-        poetry run pytest
+      run: poetry run pytest
