--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,8 +8,6 @@ on:
 
 env:
   IMAGE_NAME: eduzen_bot
-  username: ${{ secrets.DOCKERHUB_USERNAME }}
-  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
   # See also https://docs.docker.com/docker-hub/builds/
@@ -27,6 +25,9 @@ jobs:
 
       - name: Login to DockerHub
         uses: docker/login-action@v1.10.0
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
 
       - name: Build and push
         id: docker_build
