--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,16 @@ on:
   pull_request:
   release:
 
+env:
+  POETRY_VIRTUALENVS_PATH: $HOME/virtualenvs/
+
 jobs:
   tests:
     strategy:
       matrix:
         python-version: [3.9]
         poetry-version: [1.1.7]
+
     runs-on: ubuntu-latest
 
     steps:
@@ -41,7 +45,7 @@ jobs:
     - name: Set up cache
       uses: actions/cache@v2
       with:
-        path: .venv
+        path: $HOME/virtualenvs/
         key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
