--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,11 +23,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1.5.1
 
+      - name: debug
+        run: |
+          echo "debug"
+          echo ${{ secret.DOCKERHUB_USERNAME }} ${{ secret.DOCKER_USERNAME }}
+          echo ${{ env.DOCKERHUB_USERNAME }} ${{ env.DOCKER_USERNAME }}
+
       - name: Login to DockerHub
         uses: docker/login-action@v1.10.0
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+          username: ${{ secret.DOCKERHUB_USERNAME }}
+          password: ${{ secret.DOCKERHUB_TOKEN }}
 
       - name: Build and push
         id: docker_build
