--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ testpaths = ["tests"]
 attrs = "^21.2.0"
 beautifulsoup4 = "^4.9.3"
 colorama = "^0.4.4"
-emoji = "1.4.1"
+emoji = "1.4.2"
 ipdb = "^0.13.4"
 nltk = "^3.5"
 textblob = "^0.15.3"
@@ -49,18 +49,19 @@ sentry-sdk = "^1.3.1"
 tweepy = "^3.10.0"
 tmdbsimple = "^2.6.6"
 yfinance = "^0.1.63"
+pendulum = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
 factory-boy = "^3.2.0"
-ipython = "^7.25"
+ipython = "^7.26"
 jedi = "0.18.0"
 pre-commit = "^2.14.0"
 wdb = "^3.3.0"
 ipdb = "^0.13.9"
-Faker = "^8.10.2"
+Faker = "^8.11.0"
 mypy = "^0.910"
-types-requests = "^2.25.0"
+types-requests = "^2.25.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
