--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,12 @@ services:
       - shell_history:/root/hist
     env_file:
       - .env
+    links:
+      - db
+      - wdb
+    environment:
+      WDB_SOCKET_SERVER: wdb
+      WDB_NO_BROWSER_AUTO_OPEN: "True"
 
   db:
     image: postgres:13-alpine
@@ -39,4 +45,4 @@ services:
     image: adminer:latest
     restart: always
     ports:
-        - 8001:8080
+      - 8001:8080
