--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ tmdbsimple = "^2.6.6"
 yfinance = "^0.1.63"
 pendulum = "^2.1.2"
 astral = "^2.2"
+pytz = "^2021.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
