--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "bot"
 version = "0.1.0"
 description = ""
 authors = ["Eduardo Enriquez (eduzen) <eduardo.a.enriquez@gmail.com>"]
+packages = [
+    { include = "eduzen_bot" },
+    { include = "eduzen_bot/**/*.py" },
+]
 
 [build-system]
 requires = [
@@ -42,8 +46,6 @@ beautifulsoup4 = "^4.10.0"
 colorama = "^0.4.4"
 emoji = "1.5.0"
 ipdb = "^0.13.4"
-nltk = "^3.5"
-textblob = "^0.15.3"
 peewee = "3.14.4"
 python = "^3.8"
 python-telegram-bot = "13.7"
@@ -52,13 +54,15 @@ psycopg2-binary = "^2.9.1"
 regex = "^2021.8.21"
 requests = "^2.26.0"
 rich = "^10.11.0"
-sentry-sdk = "^1.3.1"
+sentry-sdk = "^1.4.3"
 tweepy = "^3.10.0"
 tmdbsimple = "^2.6.6"
 yfinance = "^0.1.63"
 pendulum = "^2.1.2"
 astral = "^2.2"
 pytz = "^2021.1"
+setuptools = "^58.1.0"
+wheel = "^0.37.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
@@ -66,16 +70,12 @@ factory-boy = "^3.2.0"
 ipython = "^7.26"
 jedi = "0.18.0"
 pre-commit = "^2.14.1"
-wdb = "^3.3.0"
 ipdb = "^0.13.9"
 Faker = "^8.14.0"
-mypy = "^0.910"
 types-requests = "^2.25.6"
 pytest-vcr = "^1.0.2"
 
-
-
 [virtualenvs]
 create = false
-# local = true
-# in-project = true
+local = false
+in-project = true
