:pencil2: Missing path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Eduardo Enriquez (eduzen) <eduardo.a.enriquez@gmail.com>"]
 packages = [
     { include = "eduzen_bot" },
-    { include = "eduzen_bot/**/*.py" },
+    { include = "/code/eduzen_bot/**/*.py" },
 ]
 
 [build-system]
