--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bot"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Eduardo Enriquez (eduzen) <eduardo.a.enriquez@gmail.com>"]
 
@@ -25,6 +25,7 @@ exclude = '''
     | htmlcov
     | venv
     | .venv
+    | virtualenvs
   )/
 )
 '''
@@ -40,18 +41,18 @@ addopts = "-s"
 attrs = "^21.2.0"
 beautifulsoup4 = "^4.10.0"
 colorama = "^0.4.4"
-emoji = "1.5.0"
+emoji = "1.6.1"
 ipdb = "^0.13.4"
-peewee = "3.14.4"
+peewee = "^3.14.4"
 python = "^3.8"
-python-telegram-bot = "13.7"
-PyYAML = "^5.4.1"
+python-telegram-bot = "^13.8.1"
+PyYAML = "^6.0"
 psycopg2-binary = "^2.9.1"
 regex = "^2021.8.21"
 requests = "^2.26.0"
 rich = "^10.11.0"
 sentry-sdk = "^1.5.0"
-tweepy = "^3.10.0"
+tweepy = "^4.4.0"
 tmdbsimple = "^2.8.1"
 yfinance = "^0.1.67"
 pendulum = "^2.1.2"
@@ -64,7 +65,6 @@ wheel = "^0.37.0"
 pytest = "^6.2.1"
 factory-boy = "^3.2.1"
 ipython = "^7.30"
-jedi = "0.18.0"
 pre-commit = "^2.14.1"
 ipdb = "^0.13.9"
 Faker = "^9.8.3"
@@ -72,6 +72,5 @@ types-requests = "^2.25.6"
 pytest-vcr = "^1.0.2"
 
 [virtualenvs]
-create = false
-local = false
-in-project = true
+cache-dir = "/root/.cache"
+in-project = false
