--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,16 +45,16 @@ emoji = "1.6.1"
 ipdb = "^0.13.4"
 peewee = "^3.14.4"
 python = "^3.8"
-python-telegram-bot = "^13.8.1"
-PyYAML = "^6.0"
-psycopg2-binary = "^2.9.1"
+python-telegram-bot = "13.11"
+psycopg2-binary = "^2.9.3"
 regex = "^2021.8.21"
 requests = "^2.26.0"
-rich = "^10.11.0"
-sentry-sdk = "^1.5.0"
+rich = "^10.16.2"
+sentry-sdk = "^1.5.4"
+tmdbsimple = "^2.9.1"
+yfinance = "^0.1.70"
+PyYAML = "^6.0"
 tweepy = "^4.4.0"
-tmdbsimple = "^2.8.1"
-yfinance = "^0.1.67"
 pendulum = "^2.1.2"
 astral = "^2.2"
 pytz = "^2021.3"
@@ -64,6 +64,7 @@ wheel = "^0.37.0"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
 factory-boy = "^3.2.1"
+jedi = "0.18.0"
 ipython = "^7.30"
 pre-commit = "^2.14.1"
 ipdb = "^0.13.9"
