:sparkles: Add cachetools and fix rich issue with COLUMNS

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,5 @@ TWITTER_ACCESS_TOKEN=token
 TWITTER_CONSUMER_KEY=key
 TWITTER_CONSUMER_SECRET=secret
 PYTHONBREAKPOINT=ipdb.set_trace
+#rich wide logs
+COLUMNS=200
