--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ pendulum = "^2.1.2"
 astral = "^2.2"
 pytz = "^2021.3"
 wheel = "^0.37.0"
+cachetools = "^=4.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^=7.0.1"
