--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,8 @@ description = ""
 authors = ["Eduardo Enriquez (eduzen) <eduardo.a.enriquez@gmail.com>"]
 
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel",
-    "poetry-core>=1.0.0",
-]
-build-backend = "setuptools.build_meta"
+requires = ["wheel", "poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
@@ -42,15 +38,14 @@ attrs = "^21.4.0"
 beautifulsoup4 = "^4.10.0"
 colorama = "^0.4.4"
 emoji = "1.6.3"
-ipdb = "^0.13.4"
 peewee = "^3.14.4"
-python = "^3.8"
+python = "^3.9"
 python-telegram-bot = "13.11"
 psycopg2-binary = "^2.9.3"
-regex = "^2021.8.21"
+regex = "^=2022.1.18"
 requests = "^2.26.0"
 rich = "^11.2.0"
-sentry-sdk = "^1.5.4"
+sentry-sdk = "^1.5.5"
 tmdbsimple = "^2.9.1"
 yfinance = "^0.1.70"
 PyYAML = "^6.0"
@@ -58,17 +53,17 @@ tweepy = "^4.4.0"
 pendulum = "^2.1.2"
 astral = "^2.2"
 pytz = "^2021.3"
-setuptools = "^58.1.0"
 wheel = "^0.37.0"
+cachetools = "^=4.2.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.1"
+pytest = "^=7.0.1"
 factory-boy = "^3.2.1"
 jedi = "0.18.0"
-ipython = "^7.30"
+ipython = "^=8.0.1"
 pre-commit = "^2.14.1"
 ipdb = "^0.13.9"
-Faker = "^9.9.1"
+Faker = "^=13.0.0"
 types-requests = "^2.27.5"
 pytest-vcr = "^1.0.2"
 
