:bug: Add database url connection

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 
-DATABASE_URL=postgres://postgres:password@db/postgres
+DATABASE_URL=postgresext+pool://postgres:password@db/postgres?max_connections=20&stale_timeout=3000
 EDUZEN_ID=someid
 HEROKU=0
 HISTFILE=/root/hist/.bash_history
