--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,9 @@ pre-commit = "^2.14.1"
 ipdb = "^0.13.9"
 Faker = "^=13.0.0"
 types-requests = "^2.27.5"
-pytest-vcr = "^1.0.2"
+pytest-sugar = "^0.9.4"
+pytest-recording = "^0.12.0"
+pytest-randomly = "^3.11.0"
 
 [virtualenvs]
 cache-dir = "/root/.cache"
