--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
   db:
     image: postgres:13.4-alpine3.14
     command: ["postgres", "-c", "log_statement=none"]
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data/
     environment:
