--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ types-requests = "^2.27.5"
 pytest-sugar = "^0.9.4"
 pytest-recording = "^0.12.0"
 pytest-randomly = "^3.11.0"
+pytest-cov = "^3.0.0"
 
 [virtualenvs]
 cache-dir = "/root/.cache"
