--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,6 @@ on:
   pull_request:
   release:
 
-env:
-  POETRY_VIRTUALENVS_PATH: $HOME/virtualenvs/
-
 jobs:
   tests:
     strategy:
@@ -36,19 +33,8 @@ jobs:
       run: |
         echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info[:3]))")
 
-    - name: Install and set up Poetry
-      run: |
-        pip install poetry==${{ matrix.poetry-version }}
-        poetry config virtualenvs.in-project true
-
-    - name: Set up cache
-      uses: actions/cache@v3.2.0
-      with:
-        path: $HOME/virtualenvs/
-        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-
     - name: Install dependencies
-      run: poetry install -v
+      run: pip install -r requirements-dev.txt
 
     - name: Test
-      run: poetry run pytest --cov=eduzenbot --cov-report=term-missing
+      run: pytest --cov=eduzenbot --cov-report=term-missing
