--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        python-version: [3.10]
+        python-version: ['3.10']
 
     runs-on: ubuntu-latest
 
