--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,8 +6,6 @@
 #
 appdirs==1.4.4
     # via yfinance
-appnope==0.1.3
-    # via ipython
 apscheduler==3.6.3
     # via python-telegram-bot
 asttokens==2.2.1
@@ -104,6 +102,8 @@ parso==0.8.3
     # via jedi
 peewee==3.15.4
     # via eduzenbot (pyproject.toml)
+pendulum==2.1.2
+    # via eduzenbot (pyproject.toml)
 pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
@@ -146,6 +146,7 @@ python-dateutil==2.8.2
     # via
     #   faker
     #   pandas
+    #   pendulum
 python-telegram-bot==13.15
     # via eduzenbot (pyproject.toml)
 pytz==2022.7
@@ -156,6 +157,8 @@ pytz==2022.7
     #   yfinance
 pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
+pytzdata==2020.1
+    # via pendulum
 pyyaml==6.0
     # via vcrpy
 requests==2.28.1
