--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
   "types-colorama",
   "types-docutils",
   "types-Pygments",
+  "types-psycopg2",
   "types-pytz",
   "types-requests",
   "types-setuptools"
