--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
   db:
     image: postgres:15-alpine3.17
     command: ["postgres", "-c", "log_statement=none"]
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - pgdata:/var/lib/postgresql/data/
     environment:
