--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,8 @@
 #
 appdirs==1.4.4
     # via yfinance
+appnope==0.1.3
+    # via ipython
 apscheduler==3.6.3
     # via python-telegram-bot
 asttokens==2.2.1
@@ -112,7 +114,7 @@ pluggy==1.0.0
     # via pytest
 prompt-toolkit==3.0.36
     # via ipython
-psycopg2-binary==2.9.5
+psycopg2==2.9.5
     # via eduzenbot (pyproject.toml)
 ptyprocess==0.7.0
     # via pexpect
