--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -114,7 +114,7 @@ pluggy==1.0.0
     # via pytest
 prompt-toolkit==3.0.36
     # via ipython
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
     # via eduzenbot (pyproject.toml)
 ptyprocess==0.7.0
     # via pexpect
