--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,12 +41,14 @@ jobs:
         export EDUZEN_ID=1234
         export TOKEN=blah
         pytest --cov=eduzenbot --cov-report=term-missing --record-mode=none -cov-report=term -cov-report=json
+        ls -l
+
 
     - name: "Upload coverage data"
       uses: actions/upload-artifact@v3
       with:
-        name: code-coverage-report
-        path: .coverage.*
+        name: .coverage
+        path: .coverage
 
 
   coverage:
@@ -67,7 +69,7 @@ jobs:
       - name: "Download coverage data"
         uses: actions/download-artifact@v3
         with:
-          name: code-coverage-report
+          name: .coverage
 
       - name: "Combine"
         run: |
