--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -38,8 +38,8 @@ charset-normalizer==2.1.1
     # via requests
 commonmark==0.9.1
     # via rich
-coverage[toml]==7.0.0
-    # via pytest-cov
+coverage==7.0.0
+    # via eduzenbot (pyproject.toml)
 cryptography==38.0.4
     # via yfinance
 decorator==5.1.1
@@ -129,13 +129,10 @@ pygments==2.13.0
 pytest==7.2.0
     # via
     #   eduzenbot (pyproject.toml)
-    #   pytest-cov
     #   pytest-mock
     #   pytest-randomly
     #   pytest-recording
     #   pytest-xdist
-pytest-cov==4.0.0
-    # via eduzenbot (pyproject.toml)
 pytest-mock==3.10.0
     # via eduzenbot (pyproject.toml)
 pytest-randomly==3.12.0
@@ -191,7 +188,6 @@ tmdbsimple==2.9.1
     # via eduzenbot (pyproject.toml)
 tomli==2.0.1
     # via
-    #   coverage
     #   ipdb
     #   mypy
     #   pytest
