--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,35 +21,17 @@ repos:
       - id: pretty-format-json
         args: [--autofix]
 
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        args: [--profile=black]
-
-  - repo: https://github.com/psf/black
-    rev: 24.2.0
-    hooks:
-      - id: black
-        args: [--safe, --quiet, -l 120]
-
-  -   repo: https://github.com/asottile/blacken-docs
-      rev: 1.16.0
-      hooks:
-      -   id: blacken-docs
-          additional_dependencies: [black==21.7b0]
-
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.1
     hooks:
       - id: pyupgrade
-        args: [--py39-plus]
+        args: [--py311-plus]
 
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: 'v0.3.3'
     hooks:
-      - id: flake8
-        language_version: python3
-        additional_dependencies:
-          - flake8-typing-imports
-          - flake8-bugbear
+      # Run the linter
+      - id: ruff
+        args: ["--fix"]
+      # Run the formatter
+      - id: ruff-format
