--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,14 @@ dependencies = [
   "peewee",
   "pendulum",
   "psycopg2-binary",
-  "python-telegram-bot",
+  "python-telegram-bot==13.15",
   "requests",
   "rich",
   "sentry-sdk",
   "tmdbsimple",
   "tweepy",
   "yfinance",
+  "python-dotenv",
 ]
 dynamic = ["version"]
 
