Update Python warnings configuration in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ LOG_LEVEL=DEBUG
 openweathermap_token=token
 PORT=5000
 POSTGRES_PASSWORD=password
-PYTHONWARNINGS=ignore:Unverified HTTPS request
+PYTHONWARNINGS="ignore:Unverified HTTPS request"
 TMDB_API_KEY=somekey
 TOKEN=token
 TWITTER_ACCESS_TOKEN_SECRET=secret
