--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ apscheduler==3.6.3
     # via python-telegram-bot
 asttokens==2.4.1
     # via stack-data
-attrs==23.2.0
+attrs==24.2.0
     # via eduzenbot (pyproject.toml)
 beautifulsoup4==4.12.3
     # via
@@ -18,14 +18,14 @@ cachetools==4.2.2
     # via
     #   eduzenbot (pyproject.toml)
     #   python-telegram-bot
-certifi==2024.6.2
+certifi==2024.7.4
     # via
     #   python-telegram-bot
     #   requests
     #   sentry-sdk
 charset-normalizer==3.3.2
     # via requests
-coverage==7.5.3
+coverage==7.6.1
     # via eduzenbot (pyproject.toml)
 decorator==5.1.1
     # via
@@ -39,7 +39,7 @@ executing==2.0.1
     # via stack-data
 factory-boy==3.3.0
     # via eduzenbot (pyproject.toml)
-faker==25.8.0
+faker==26.3.0
     # via factory-boy
 frozendict==2.4.4
     # via yfinance
@@ -53,7 +53,7 @@ iniconfig==2.0.0
     # via pytest
 ipdb==0.13.13
     # via eduzenbot (pyproject.toml)
-ipython==8.25.0
+ipython==8.26.0
     # via
     #   eduzenbot (pyproject.toml)
     #   ipdb
@@ -71,11 +71,11 @@ multidict==6.0.5
     # via yarl
 multitasking==0.0.11
     # via yfinance
-mypy==1.10.0
+mypy==1.11.1
     # via eduzenbot (pyproject.toml)
 mypy-extensions==1.0.0
     # via mypy
-numpy==1.26.4
+numpy==2.0.1
     # via
     #   pandas
     #   yfinance
@@ -83,13 +83,13 @@ oauthlib==3.2.2
     # via
     #   requests-oauthlib
     #   tweepy
-packaging==24.0
+packaging==24.1
     # via pytest
 pandas==2.2.2
     # via yfinance
 parso==0.8.4
     # via jedi
-peewee==3.17.5
+peewee==3.17.6
     # via
     #   eduzenbot (pyproject.toml)
     #   yfinance
@@ -101,19 +101,19 @@ platformdirs==4.2.2
     # via yfinance
 pluggy==1.5.0
     # via pytest
-prompt-toolkit==3.0.46
+prompt-toolkit==3.0.47
     # via ipython
 psycopg2-binary==2.9.9
     # via eduzenbot (pyproject.toml)
 ptyprocess==0.7.0
     # via pexpect
-pure-eval==0.2.2
+pure-eval==0.2.3
     # via stack-data
 pygments==2.18.0
     # via
     #   ipython
     #   rich
-pytest==8.2.2
+pytest==8.3.2
     # via
     #   eduzenbot (pyproject.toml)
     #   pytest-mock
@@ -124,7 +124,7 @@ pytest-mock==3.14.0
     # via eduzenbot (pyproject.toml)
 pytest-randomly==3.15.0
     # via eduzenbot (pyproject.toml)
-pytest-recording==0.13.1
+pytest-recording==0.13.2
     # via eduzenbot (pyproject.toml)
 pytest-xdist==3.6.1
     # via eduzenbot (pyproject.toml)
@@ -144,7 +144,7 @@ pytz==2024.1
     #   pandas
     #   python-telegram-bot
     #   yfinance
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via vcrpy
 requests==2.32.3
     # via
@@ -157,7 +157,7 @@ requests-oauthlib==1.3.1
     # via tweepy
 rich==13.7.1
     # via eduzenbot (pyproject.toml)
-sentry-sdk==2.5.1
+sentry-sdk==2.12.0
     # via eduzenbot (pyproject.toml)
 six==1.16.0
     # via
@@ -169,7 +169,7 @@ soupsieve==2.5
     # via beautifulsoup4
 stack-data==0.6.3
     # via ipython
-time-machine==2.14.1
+time-machine==2.15.0
     # via pendulum
 tmdbsimple==2.9.1
     # via eduzenbot (pyproject.toml)
@@ -183,15 +183,15 @@ tweepy==4.14.0
     # via eduzenbot (pyproject.toml)
 types-beautifulsoup4==4.12.0.20240511
     # via eduzenbot (pyproject.toml)
-types-cachetools==5.3.0.7
+types-cachetools==5.4.0.20240717
     # via eduzenbot (pyproject.toml)
 types-colorama==0.4.15.20240311
     # via eduzenbot (pyproject.toml)
-types-docutils==0.21.0.20240423
+types-docutils==0.21.0.20240724
     # via
     #   eduzenbot (pyproject.toml)
     #   types-pygments
-types-html5lib==1.1.11.20240228
+types-html5lib==1.1.11.20240806
     # via types-beautifulsoup4
 types-psycopg2==2.9.21.20240417
     # via eduzenbot (pyproject.toml)
@@ -199,9 +199,9 @@ types-pygments==2.18.0.20240506
     # via eduzenbot (pyproject.toml)
 types-pytz==2024.1.0.20240417
     # via eduzenbot (pyproject.toml)
-types-requests==2.32.0.20240602
+types-requests==2.32.0.20240712
     # via eduzenbot (pyproject.toml)
-types-setuptools==70.0.0.20240524
+types-setuptools==71.1.0.20240806
     # via
     #   eduzenbot (pyproject.toml)
     #   types-pygments
@@ -216,7 +216,7 @@ tzdata==2024.1
     #   pendulum
 tzlocal==5.2
     # via apscheduler
-urllib3==2.2.1
+urllib3==2.2.2
     # via
     #   requests
     #   sentry-sdk
@@ -231,7 +231,7 @@ wrapt==1.16.0
     # via vcrpy
 yarl==1.9.4
     # via vcrpy
-yfinance==0.2.40
+yfinance==0.2.41
     # via eduzenbot (pyproject.toml)
 
 # The following packages are considered to be unsafe in a requirements file:
