--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
   "cachetools",
   "emoji",
   "peewee",
-  "python-telegram-bot",
+  "python-telegram-bot[job-queue]",
   "requests",
   "sentry-sdk",
   "tmdbsimple",
