refactor: update docker-compose for dynamic target, remove Question model, and add CSV import scripts for users, events, and reports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: eduzen/bot:latest
     build:
       context: .
-      target: dev
+      target: ${TARGET:-dev}
       cache_from:
         - eduzen/bot:latest
     develop:
