--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ dependencies = [
   "sentry-sdk",
   "yfinance",
   "python-dotenv",
-  "logfire[httpx]>=2.11.1",
+  "logfire>=2.11.1",
   "httpx>=0.28.1",
   "psycopg>=3.2.4",
+  "tabulate>=0.9.0",
 ]
 
 [dependency-groups]
@@ -33,14 +34,6 @@ dev = [
   "pytest-randomly",
   "pytest-asyncio>=0.25.2",
   "mypy",
-  "types-beautifulsoup4",
-  "types-colorama",
-  "types-docutils",
-  "types-Pygments",
-  "types-psycopg2",
-  "types-pytz",
-  "types-requests",
-  "types-setuptools",
   "respx>=0.22.0",
 ]
 
