Update GitHub Actions and pre-commit dependencies (#484)
* Update GitHub Actions and pre-commit dependencies

* update telgram bot library

* wip

* Refactor codebase: remove unused files, update dependencies, and replace requests with httpx

* massive refactor

* massive refactor

* Refactor weather and dollar command handling: streamline message sending and improve error logging

* pipeline

* pipeline

* pipeline

* pipeline

* types

* refactor: remove cachetools dependency and related cached decorators

* refactor: update .gitignore, enhance logfire usage, and add new columns to Report model

* refactor: update docker-compose for dynamic target, remove Question model, and add CSV import scripts for users, events, and reports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 volumes:
-  pgdata:
   shell_history:
+  pgdata:
 
 services:
   eduzenbot:
@@ -8,22 +8,36 @@ services:
     image: eduzen/bot:latest
     build:
       context: .
-      target: dev
+      target: ${TARGET:-dev}
       cache_from:
         - eduzen/bot:latest
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /code
+          ignore:
+            - .venv/
+            - .git/
+            - .vscode/
+            - .pytest_cache/
+            - __pycache__/
+        - action: rebuild
+          path: ./pyproject.toml
     volumes:
+      - /code/.venv
       - .:/code
       - shell_history:/root/hist
     env_file:
       - .env
-    links:
-      - db
 
   db:
-    image: postgres:13-alpine3.17
+    image: postgres:17-alpine
     command: ["postgres", "-c", "log_statement=none"]
     expose:
       - "5432"
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data/
     environment:
