--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,46 +11,47 @@ on:
 
 jobs:
   tests:
-    strategy:
-      matrix:
-        python-version: ['3.11']
-
     runs-on: ubuntu-latest
-
+    env:
+      UV_CACHE_DIR: ${{ github.workspace }}/.cache/uv
+      EDUZEN_ID: 1234
+      TOKEN: blah
     steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions/setup-python@v5.2.0
-      with:
-        python-version: ${{ matrix.python-version }}
+    - uses: actions/checkout@v4
 
     - name: Setup libsqlite3
       run: |
         sudo apt-get install libsqlite3-dev
 
-    - name: Get full python version
-      id: full-python-version
-      run: |
-        echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info[:3]))")
-
-    - name: Install dependencies
-      run: pip install -r requirements-dev.txt
-
-    - uses: actions/cache@v4.0.2
-      id: cache
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
+        enable-cache: true
+
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+
+    - name: Restore uv cache
+      uses: actions/cache@v4
+      with:
+        path: ${{ env.UV_CACHE_DIR }}
+        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          uv-${{ runner.os }}
+
+    - name: Install the project
+      run: uv sync --all-extras --dev
+
+    - name: Check Code Style
+      uses: pre-commit/action@v3.0.1
 
     - name: Test
       run: |
-        export EDUZEN_ID=1234 TOKEN=blah
-        coverage run -m pytest --record-mode=none
-        python -m coverage combine
-        python -m coverage report -m --skip-covered
-        python -m coverage json
+        uv run coverage run -m pytest
+        uv run coverage combine
+        uv run coverage report -m --skip-covered
+        uv run coverage json
 
     - name: "Upload coverage data"
       uses: actions/upload-artifact@v4
@@ -58,50 +59,5 @@ jobs:
         name: coverage.json
         path: coverage.json
 
-
-  coverage:
-    name: Coverage
-    needs: tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: "Check out the repo"
-        uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v5.2.0
-        with:
-            python-version: 3.11
-
-      - uses: actions/cache@v4.0.1
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dependencies
-        run: pip install -r requirements-dev.txt
-
-      - name: "Download coverage data"
-        uses: actions/download-artifact@v4
-        with:
-          name: coverage.json
-
-      - name: "Combine"
-        run: |
-          export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
-          echo "total=$TOTAL" >> $GITHUB_ENV
-          echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
-
-      - name: Create Awesome Badge
-        uses: schneegans/dynamic-badges-action@v1.7.0
-        with:
-          auth: ${{ secrets.GIST_SECRET }}
-          gistID: 939569bc7abab34a443758333f60764d
-          filename: covbadge.json
-          label: Coverage
-          color: orange
-          message: ${{ env.total }}%
-          minColorRange: 50
-          maxColorRange: 90
-          valColorRange: ${{ env.total }}
+    - name: Minimize uv cache
+      run: uv cache prune --ci
